deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sapp-deployment
  labels:
    app: sapp-application
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sapp-application
  template:
    metadata:
      labels:
        app: sapp-application
    spec:
      containers:
        - name: sapp-application
          image: europe-west2-docker.pkg.dev/zora-hackathon/sapp-production/sapp-application:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
      restartPolicy: Always
