service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sapp-service
  labels:
    app: sapp-application
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: sapp-application
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
